# WorkSpace

./: .gitignore  README.md
backend/docker/: dev.yaml
backend/services/gitbridge/: .env  .env.example  .flake8  .pre-commit-config.yaml  pyproject.toml
backend/services/gitbridge/src/: main.py
backend/services/gitbridge/src/api/v1/: github.py
backend/services/gitbridge/src/db/: rabbitmq.py
backend/services/gitbridge/src/schemas/: common.py  github.py  issues.py  pull_request.py  responses.py  tasks.py  user.py
backend/services/gitbridge/src/services/: github.py
backend/services/gitbridge/src/settings/: application.py
backend/services/gitbridge/src/utils/: exceptions.py  publishers.py  transformers.py  user_repositories.py  validators.py
backend/services/gitbridge/tests/unit_tests/: conftest.py
backend/services/gitbridge/tests/unit_tests/data/: github_issue_payload.json
backend/services/gitbridge/tests/unit_tests/utils/: test_transformers.py  test_validators.py
backend/services/gitbridge/utils/: test_rabbit_consumer.py
backend/services/taskapi/: .gitignore  README.md
